<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingTop="30dp"
	app:layout_behavior="@string/appbar_scrolling_view_behavior">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<TextView
			style="@style/S16MediumBlack"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="16dp"
			android:text="@string/end_diffuser_description" />

		<com.example.medapp.ui.widget.CustomInputView
			android:id="@+id/civLightSpot"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			app:description="@string/end_diffuser_light_spot_diameter"
			app:designation="@string/designation_d"
			app:unit="@string/units_sm" />

		<View
			android:layout_width="match_parent"
			android:layout_height="2dp"
			android:layout_marginTop="15dp"
			android:background="@color/green_75_50_percent_transparent" />

		<com.example.medapp.ui.widget.CustomInputView
			android:id="@+id/civLaserPower"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			app:description="@string/common_laser_power"
			app:designation="@string/designation_P"
			app:unit="@string/units_mvt" />

		<View
			android:layout_width="match_parent"
			android:layout_height="2dp"
			android:layout_marginTop="15dp"
			android:background="@color/green_75_50_percent_transparent" />

		<com.example.medapp.ui.widget.CustomInputView
			android:id="@+id/civTreatmentDose"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			app:description="@string/common_treatment_dose"
			app:designation="@string/designation_D"
			app:unit="@string/units_joules_on_cm" />

		<View
			android:layout_width="match_parent"
			android:layout_height="2dp"
			android:layout_marginTop="15dp"
			android:background="@color/green_75_50_percent_transparent" />

		<com.example.medapp.ui.widget.CustomInputView
			android:id="@+id/civEnergyLoss"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			app:description="@string/common_energy_loss"
			app:designation=""
			app:unit="@string/units_procent" />

		<TextView
			android:id="@+id/tvCalculate"
			style="@style/GreenButton"
			android:layout_width="match_parent"
			android:layout_marginHorizontal="16dp"
			android:layout_marginTop="30dp"
			android:text="@string/common_calculate" />

		<TextView
			android:id="@+id/tvClear"
			style="@style/BlackButton"
			android:layout_width="match_parent"
			android:layout_marginHorizontal="16dp"
			android:layout_marginTop="20dp"
			android:text="@string/common_clear" />

		<View
			android:layout_width="match_parent"
			android:layout_height="6dp"
			android:layout_marginTop="25dp"
			android:background="@color/red_2E" />

		<com.example.medapp.ui.widget.CustomResultView
			android:id="@+id/crvTime"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			app:title="@string/common_time" />

		<LinearLayout
			android:id="@+id/llContainerS"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">

			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_marginTop="25dp"
				android:background="@color/grey_1E" />

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="15dp">

				<TextView
					android:id="@+id/tvTitleS"
					style="@style/S21BoldBlack"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:text="@string/designation_S"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<TextView
					android:id="@+id/tvValueS"
					style="@style/S21BoldBlack"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="16dp"
					app:layout_constraintLeft_toRightOf="@id/tvTitleS"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:text="13.6" />

			</androidx.constraintlayout.widget.ConstraintLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_marginTop="15dp"
				android:background="@color/grey_1E" />

		</LinearLayout>

		<com.example.medapp.ui.widget.CustomVtSmView
			android:id="@+id/vsvVtSm"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="25dp" />

	</LinearLayout>
</androidx.core.widget.NestedScrollView>